# hypercube

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  requirements.md  session.md
src/: app.rs  camera.rs  clear.wgsl  cube.rs  input.rs  main.rs  math.rs  ray_casting.rs  renderer.rs  shader_widget.rs
src/shaders/: clear.wgsl  compute.wgsl  debug_shader.wgsl  depth_shader.wgsl  line_shader.wgsl  math4d.wgsl  normal_shader.wgsl  shader.wgsl
